# ab-optimisation-framework

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
dashboard/: design.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
dashboard/src/: app.html  app.scss
dashboard/src/assets/: global.css  global_2.css
dashboard/src/components/: Badge.svelte  BaseAlert.svelte  BaseButton.svelte  BaseDropdown.svelte  BaseHeader.svelte  BasePagination.svelte  BaseProgress.svelte  BaseSlider.svelte  (+9 more)
dashboard/static/: argon.css
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/api_docs/: app_apis.md  experiment_apis.md  project_apis.md  server_status.md
service/: .gitignore  Cargo.toml
service/config/: log4rs.yml  log4rs_rolling_file.yml  service-default.yml  service-prod.yml  service-stage.yml
service/data/apps/: -lm0XFOyf4dPCSZaOcuzA-app-data.json  Ok-cUE-XSGUqyRWiqwKti.app.data.json  Ow-a1zNlGalNPtfhwqcHA.app.data.json  RsgybJFsJ4oFGjejb9yxl.app.data.json  app1-app-data.json  app1.app.data.json
service/data/audience_lists/: RsgybJFsJ4oFGjejb9yxl.KlyOGxv9FUxfGCWqc7O7O.nWDppTrcmJxlx6kMXwHS5.audience-list.data.json  RsgybJFsJ4oFGjejb9yxl.fFx_w0K8gwAfP-k-ogoql.-roN3jD7sYU294FxTtemL.audience-list.data.json  app1-android-beta_users-audience-list-data.json  app1.android.royNLSOmuaNJa377oTTyu.audience-list.data.json
service/data/experiments/: Ok-cUE-XSGUqyRWiqwKti.57jGnyABokdzrOHv5uq3L.aqm3VPy-_qXUKWy9dNfXe.experiment.data.json  Ok-cUE-XSGUqyRWiqwKti.V1NauWW7Qs73MR5J6X0ZF._Qjw19dMdVIf9CJwDtSgN.experiment.data.json  Ok-cUE-XSGUqyRWiqwKti.V1NauWW7Qs73MR5J6X0ZF.nL4sYPJP1BLBMvnON9tHG.experiment.data.json  Ok-cUE-XSGUqyRWiqwKti.V1NauWW7Qs73MR5J6X0ZF.uozzmUfCHsmVitB0XAJWl.experiment.data.json  Ow-a1zNlGalNPtfhwqcHA.K3vbg5blK_PGXjB1cfLr-.IRenRc-iFWegvEqGAPrJy.experiment.data.json  Ow-a1zNlGalNPtfhwqcHA.K3vbg5blK_PGXjB1cfLr-.js_8qLsqGaixv2aPaAtsR.experiment.data.json  RsgybJFsJ4oFGjejb9yxl.KlyOGxv9FUxfGCWqc7O7O.9xriNtdYnaH0AK1GV1Cju.experiment.data.json  RsgybJFsJ4oFGjejb9yxl.KlyOGxv9FUxfGCWqc7O7O.kM_KtKLGmMe4U4oK5reay.experiment.data.json  RsgybJFsJ4oFGjejb9yxl.KlyOGxv9FUxfGCWqc7O7O.rd9rMnxevEXUAtdmH-NHD.experiment.data.json  RsgybJFsJ4oFGjejb9yxl.KlyOGxv9FUxfGCWqc7O7O.tWJvvVeKwu6-ia2Z4_Q2-.experiment.data.json  RsgybJFsJ4oFGjejb9yxl.fFx_w0K8gwAfP-k-ogoql.BsXPxti992gif8VHLuwxN.experiment.data.json  app1-android-onboarding-experiment-data.json  app1.android.mnNu9P-36Wal6DJhgdE4V.experiment.data.json
service/data/projects/: Ok-cUE-XSGUqyRWiqwKti.57jGnyABokdzrOHv5uq3L.project.data.json  Ok-cUE-XSGUqyRWiqwKti.FLWhGkHDtSzShhj8mEl0r.project.data.json  Ok-cUE-XSGUqyRWiqwKti.V1NauWW7Qs73MR5J6X0ZF.project.data.json  Ow-a1zNlGalNPtfhwqcHA.K3vbg5blK_PGXjB1cfLr-.project.data.json  RsgybJFsJ4oFGjejb9yxl.KlyOGxv9FUxfGCWqc7O7O.project.data.json  RsgybJFsJ4oFGjejb9yxl.fFx_w0K8gwAfP-k-ogoql.project.data.json  RsgybJFsJ4oFGjejb9yxl.rHX1e2HILzLIrcpAKqfc1.project.data.json  app1-android-project-data.json  app1-gScyMT2I3iJp1ql5GbEml-project-data.json  app1.android.project.data.json
service/examples/: sample.json
service/examples/api_requests/: app_apis.http  audience_list_apis.http  experiment_apis.http  http-client.env.json  project_apis.http  run_apis.http
service/src/: application.rs  cli.yml  config.rs  experiment_store.rs  main.rs  service.rs  settings.rs
service/src/api/: common.rs  experiment_runner.rs  experiment_tracking_data.rs  mod.rs  tracking_cookie_parser.pest
service/src/core/: app.rs  audience_list.rs  experiment.rs  experiment_group.rs  mod.rs  project.rs  script.rs  skiplist_serde.rs  variation.rs
service/src/experiment_store/: mod.rs  store.rs
service/src/server/: access_logger.rs  app.rs  commons.rs  error.rs  health_check.rs  http_request.rs  http_response.rs  http_route.rs  http_server.rs  mod.rs  service.rs
service/src/server/access_logger/: access_logger.rs  metrics.rs  response_time.rs
service/tests/: eval_python.rs
(+81 files in other folders)
